--- a/img.qrc
+++ b/img.qrc
@@ -6,5 +6,6 @@
         <file>img/open.png</file>
         <file>img/save.png</file>
         <file>img/create.png</file>
+        <file>img/apply.png</file>
     </qresource>
 </RCC>
