--- a/functionpage.ui
+++ b/functionpage.ui
@@ -28,6 +28,12 @@
       <property name="text">
        <string>AppToSD</string>
       </property>
+      <property name="checkable">
+       <bool>true</bool>
+      </property>
+      <property name="autoRepeatDelay">
+       <number>299</number>
+      </property>
      </widget>
     </item>
     <item row="3" column="0">
