--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -63,20 +63,11 @@
     <addaction name="actSaveAs"/>
     <addaction name="actExit"/>
    </widget>
-   <widget class="QMenu" name="menu">
-    <property name="title">
-     <string>编辑</string>
-    </property>
-    <addaction name="actCopy"/>
-    <addaction name="actCut"/>
-    <addaction name="actPaste"/>
-    <addaction name="actUndo"/>
-    <addaction name="actSelectAll"/>
-   </widget>
    <widget class="QMenu" name="menu_2">
     <property name="title">
      <string>工具</string>
     </property>
+    <addaction name="actSetingTE"/>
    </widget>
    <widget class="QMenu" name="menu_3">
     <property name="title">
@@ -89,27 +80,11 @@
     </property>
    </widget>
    <addaction name="menu_prj"/>
-   <addaction name="menu"/>
    <addaction name="menu_2"/>
    <addaction name="menu_3"/>
    <addaction name="menu_4"/>
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
-  <widget class="QToolBar" name="mainToolBar">
-   <attribute name="toolBarArea">
-    <enum>TopToolBarArea</enum>
-   </attribute>
-   <attribute name="toolBarBreak">
-    <bool>false</bool>
-   </attribute>
-   <addaction name="actNew"/>
-   <addaction name="separator"/>
-   <addaction name="actOpen"/>
-   <addaction name="actClose"/>
-   <addaction name="actSave"/>
-   <addaction name="actSaveAs"/>
-   <addaction name="actApply"/>
-  </widget>
   <action name="actNew">
    <property name="checkable">
     <bool>false</bool>
@@ -198,6 +173,11 @@
    </property>
    <property name="text">
     <string>开始应用</string>
+   </property>
+  </action>
+  <action name="actSetingTE">
+   <property name="text">
+    <string>设置文本编辑器</string>
    </property>
   </action>
  </widget>
