--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -60,14 +60,12 @@
     <addaction name="actOpen"/>
     <addaction name="actClose"/>
     <addaction name="actSave"/>
-    <addaction name="actSaveAs"/>
     <addaction name="actExit"/>
    </widget>
    <widget class="QMenu" name="menu_2">
     <property name="title">
      <string>工具</string>
     </property>
-    <addaction name="actSetingTE"/>
    </widget>
    <widget class="QMenu" name="menu_3">
     <property name="title">
@@ -78,6 +76,8 @@
     <property name="title">
      <string>帮助</string>
     </property>
+    <addaction name="actDoc"/>
+    <addaction name="actAbout"/>
    </widget>
    <addaction name="menu_prj"/>
    <addaction name="menu_2"/>
@@ -94,7 +94,7 @@
    </property>
    <property name="icon">
     <iconset resource="img.qrc">
-     <normaloff>:/new/img/img/create.png</normaloff>:/new/img/img/create.png</iconset>
+     <normaloff>:/new/img/img/new.png</normaloff>:/new/img/img/new.png</iconset>
    </property>
    <property name="text">
     <string>新建</string>
@@ -112,7 +112,7 @@
   <action name="actClose">
    <property name="icon">
     <iconset resource="img.qrc">
-     <normaloff>:/new/img/img/manage.png</normaloff>:/new/img/img/manage.png</iconset>
+     <normaloff>:/new/img/img/close.png</normaloff>:/new/img/img/close.png</iconset>
    </property>
    <property name="text">
     <string>关闭</string>
@@ -121,7 +121,7 @@
   <action name="actSave">
    <property name="icon">
     <iconset resource="img.qrc">
-     <normaloff>:/new/img/img/close.png</normaloff>:/new/img/img/close.png</iconset>
+     <normaloff>:/new/img/img/save.png</normaloff>:/new/img/img/save.png</iconset>
    </property>
    <property name="text">
     <string>保存</string>
@@ -137,6 +137,10 @@
    </property>
   </action>
   <action name="actExit">
+   <property name="icon">
+    <iconset resource="img.qrc">
+     <normaloff>:/new/img/img/exit.png</normaloff>:/new/img/img/exit.png</iconset>
+   </property>
    <property name="text">
     <string>退出</string>
    </property>
@@ -168,7 +172,7 @@
   </action>
   <action name="actApply">
    <property name="icon">
-    <iconset resource="img.qrc">
+    <iconset>
      <normaloff>:/new/img/img/apply.png</normaloff>:/new/img/img/apply.png</iconset>
    </property>
    <property name="text">
@@ -178,6 +182,24 @@
   <action name="actSetingTE">
    <property name="text">
     <string>设置文本编辑器</string>
+   </property>
+  </action>
+  <action name="actAbout">
+   <property name="icon">
+    <iconset resource="img.qrc">
+     <normaloff>:/new/img/img/info.png</normaloff>:/new/img/img/info.png</iconset>
+   </property>
+   <property name="text">
+    <string>关于</string>
+   </property>
+  </action>
+  <action name="actDoc">
+   <property name="icon">
+    <iconset resource="img.qrc">
+     <normaloff>:/new/img/img/doc.png</normaloff>:/new/img/img/doc.png</iconset>
+   </property>
+   <property name="text">
+    <string>说明文档</string>
    </property>
   </action>
  </widget>
